--- a/src/customer/serverless.yml
+++ b/src/customer/serverless.yml
@@ -15,6 +15,7 @@ provider:
 custom:
   npm-version: ${file(package.json):name}@${file(package.json):version}
   ow-package: ${opt:ow-package, self:custom.npm-version}
+  concurrency: 200
 
 plugins:
   - serverless-openwhisk
@@ -27,15 +28,19 @@ functions:
   getCustomerByIdService:
     name: ${self:custom.ow-package}/getCustomerByIdService
     handler: getCustomerById.main
+    concurrency: ${self:custom.concurrency}
 
   postCustomerLoginService:
     name: ${self:custom.ow-package}/postCustomerLoginService
     handler: postCustomerLogin.main
+    concurrency: ${self:custom.concurrency}
 
   postCustomerAuthService:
     name: ${self:custom.ow-package}/postCustomerAuthService
     handler: postCustomerAuth.main
+    concurrency: ${self:custom.concurrency}
 
   getCustomerService:
     name: ${self:custom.ow-package}/getCustomerService
     handler: getCustomer.main
+    concurrency: ${self:custom.concurrency}
