--- a/src/products/serverless.yml
+++ b/src/products/serverless.yml
@@ -15,6 +15,7 @@ provider:
 custom:
   npm-version: ${file(package.json):name}@${file(package.json):version}
   ow-package: ${opt:ow-package, self:custom.npm-version}
+  concurrency: 200
 
 plugins:
   - serverless-openwhisk
@@ -27,11 +28,14 @@ functions:
   getProductByIdService:
     name: ${self:custom.ow-package}/getProductByIdService
     handler: getProductById.main
+    concurrency: ${self:custom.concurrency}
 
   getProductBySlugService:
     name: ${self:custom.ow-package}/getProductBySlugService
     handler: getProductBySlug.main
+    concurrency: ${self:custom.concurrency}
 
   searchProductsService:
     name: ${self:custom.ow-package}/searchProductsService
     handler: searchProducts.main
+    concurrency: ${self:custom.concurrency}
